# django-api-demo

./: .env.dist  .gitignore  docker-compose.yml  pyproject.toml
.docker/db/: Dockerfile  my.cnf
.docker/django_api_demo/: Dockerfile
common/: authentication.py  backends.py  exceptions.py  permissions.py  view_mixin.py
config/: middleware.py  settings.py  urls.py
login/: serializers.py  views.py
user/: serializers.py  views.py
user/migrations/: 0001_initial.py  0002_demouser_alter_adminuser_managers_and_more.py
user/models/: __init__.py  admin_user.py  demo_user.py  user.py
